# HS3TestSuite

./: .gitignore  README.md  manifest.json  pyproject.toml
fixtures/rf101_basics/: expected.json  hs3.json  metadata.json
fixtures/rf103_interprfuncs/: expected.json  hs3.json  metadata.json
fixtures/rf110_normintegration/: expected.json  hs3.json  metadata.json
fixtures/rf111_derivatives/: expected.json  hs3.json  metadata.json
fixtures/rf203_ranges/: expected.json  hs3.json  metadata.json
fixtures/rf207_comptools/: expected.json  hs3.json  metadata.json
fixtures/rf208_convolution_fft3/: expected.json  hs3.json  metadata.json
fixtures/rf209_anaconv/: expected.json  hs3.json  metadata.json
fixtures/rf210_angularconv/: expected.json  hs3.json  metadata.json
fixtures/rf301_composition/: expected.json  hs3.json  metadata.json
fixtures/rf302_utilfuncs/: expected.json  hs3.json  metadata.json
fixtures/rf303_conditional/: expected.json  hs3.json  metadata.json
fixtures/rf304_uncorrprod/: expected.json  hs3.json  metadata.json
fixtures/rf305_condcorrprod/: expected.json  hs3.json  metadata.json
fixtures/rf308_normintegration2d/: expected.json  hs3.json  metadata.json
fixtures/rf309_ndimplot/: expected.json  hs3.json  metadata.json
fixtures/rf311_rangeplot/: expected.json  hs3.json  metadata.json
hs3suite/: __init__.py  cli.py  manifest.py  runner.py  specs.py  validation.py
schemas/: expected.schema.json  manifest.schema.json  metadata.schema.json
tests/: test_suite_integrity.py
tools/: build_manifest_and_expected.py  upconvert_hs3_roofit.py
(+8 files in other folders)
