[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hs3testsuite"
version = "0.1.0"
description = "HS3 backend conformance test suite"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
